--- a/style.css
+++ b/style.css
@@ -15,8 +15,28 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Baloo Chettan 2', cursive;
+    position: relative;
 }
-
+.embellishment {
+    font-size: 120px;
+    color: #7d8e00;
+    
+    position: absolute; 
+}
+.embellishment--left {
+    top: 300px;
+    left: 300px;
+    transform: rotate(-90deg);
+    text-shadow:  -3px -3px 5px #4b5500, 
+                 3px 3px 4px #9fb500; 
+}
+.embellishment--right {
+    bottom: 300px;
+    right: 300px;
+    transform: rotate(90deg);
+    text-shadow:  3px 3px 5px #4b5500, 
+                 -3px -3px 4px #9fb500; 
+}
 main {
     display: flex;
     align-items: center;
@@ -33,9 +53,11 @@ main {
 }
 h1 {
     display: inline-block;
-    font-size: 22px;
+    font-size: 50px;
     text-transform: uppercase;
-    color:#1b1f00; 
+    color: #7d8e00;
+    text-shadow:  -3px 3px 4px #4b5500, 
+                 2px -2px 4px #9fb500;     
 }
 .form {
     display: inline-block;
