--- a/style.scss
+++ b/style.scss
@@ -20,21 +20,21 @@ body {
 .embellishment {
     font-size: 120px;
     color: #7d8e00;
-    position: absolute; 
-}
-.embellishment--left {
-    top: 300px;
-    left: 300px;
-    transform: rotate(-90deg);
-    text-shadow:  -3px -3px 5px #4b5500, 
-                 3px 3px 4px #9fb500; 
-}
-.embellishment--right {
-    bottom: 300px;
-    right: 300px;
-    transform: rotate(90deg);
-    text-shadow:  3px 3px 5px #4b5500, 
-                 -3px -3px 4px #9fb500; 
+    position: absolute;
+    &--left {
+        top: 300px;
+        left: 300px;
+        transform: rotate(-90deg);
+        text-shadow:  -3px -3px 5px #4b5500, 
+                     3px 3px 4px #9fb500; 
+    }
+    &--right {
+        bottom: 300px;
+        right: 300px;
+        transform: rotate(90deg);
+        text-shadow:  3px 3px 5px #4b5500, 
+                     -3px -3px 4px #9fb500; 
+    }
 }
 
 main {
@@ -63,50 +63,116 @@ h1 {
 .form {
     display: inline-block;
     width: 600px;
+    &__line {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-areas: "form-description form__item";
+        width: 100%;
+        column-gap: 5px;
+        padding: 0 10px;
+    }
+    &__description {
+        color:#1b1f00; 
+        grid-area: form-description; 
+        font-weight: bold; 
+        display: flex;
+        align-items: center;
+        &--radio {
+            color:#1b1f00; 
+            grid-area: form-description; 
+            font-weight: bold; 
+            align-items: baseline;
+        }
+        &--checkbox {
+            color:#1b1f00; 
+            grid-area: form-description; 
+            font-weight: bold; 
+            align-items: baseline;
+        }
+        &--essay {
+            color:#1b1f00; 
+            grid-area: form-description; 
+            font-weight: bold; 
+            display: flex;
+            align-items: top;
+        }
+    }
+    &__item {
+        width: 100%;  
+        color:#e1ff00; 
+        background: #758500;
+        box-shadow: inset -4px 4px 4px #4b5500, 
+                    inset 4px -4px 4px #9fb500; 
+        grid-area: form__item;
+        border-radius: 6px;
+        border: none;
+        padding-left: 5px;
+        &::placeholder {
+            color: #adc400;
+        }
+        &--send {
+            display: block;
+            width: auto;
+            margin: auto;
+            color:#e1ff00; 
+            background: linear-gradient(225deg, #7d8e00, #697800);
+            box-shadow:  -5px 5px 10px #4b5500, 
+                         5px -5px 10px #9fb500; 
+            border-radius: 6px;
+            border: none;
+            margin-top: 40px;
+            padding: 5px 15px;
+        }
+        &--radio {
+            display: inline-block;
+            -webkit-appearance: none;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: linear-gradient(225deg, #7d8e00, #697800);
+            box-shadow:  -5px 5px 10px #4b5500, 
+                         5px -5px 10px #9fb500;
+            margin-right: 10px;
+            margin-left: 40px;
+            vertical-align: middle;
+            &:checked {
+                background: #abc200;
+                box-shadow: inset -2px 2px 4px #6d7c00, 
+                            inset 2px -2px 4px #e9ff00;
+            }
+        }
+        &--checkbox {
+            -webkit-appearance: none;
+            position: relative;
+            width: 20px;
+            height: 20px;
+            border-radius: 5px;
+            background: linear-gradient(225deg, #7d8e00, #697800);
+            box-shadow:  -5px 5px 10px #4b5500, 
+                         5px -5px 10px #9fb500;
+            margin-right: 10px;
+            vertical-align: middle;
+            &:checked {  
+                background: #abc200;
+                box-shadow: inset -2px 2px 4px #6d7c00, 
+                            inset 2px -2px 4px #e9ff00;
+                &::before {
+                    position: absolute;
+                    top: 5px;
+                    left: 4px;
+                    /* check from Font Awesome */
+                    content: "\f00c";
+                    font-family: "Font Awesome 5 Free";
+                    font-size: 12px;
+                    line-height: 12px;
+                    font-weight: bold;
+                    color: rgb(134, 0, 0);
+                }
+            }
+        }
+    }
 }
-.form__line {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-areas: "form-description form__item";
-    width: 100%;
-    column-gap: 5px;
-    padding: 0 10px;
-}
-.form-description {
-    color:#1b1f00; 
-    grid-area: form-description; 
-    font-weight: bold; 
-    align-items: baseline;
-    display: flex;
-    align-items: center;
-}
-.form__item {
-    width: 100%;  
-    color:#e1ff00; 
-    background: #758500;
-    box-shadow: inset -4px 4px 4px #4b5500, 
-                inset 4px -4px 4px #9fb500; 
-    grid-area: form__item;
-    border-radius: 6px;
-    border: none;
-    padding-left: 5px;
-}
-.form__item::placeholder {
-    color: #adc400;
-}
-.form__item--send {
-    display: block;
-    width: auto;
-    margin: auto;
-    color:#e1ff00; 
-    background: linear-gradient(225deg, #7d8e00, #697800);
-    box-shadow:  -5px 5px 10px #4b5500, 
-                 5px -5px 10px #9fb500; 
-    border-radius: 6px;
-    border: none;
-    margin-top: 40px;
-    padding: 5px 15px;
-}
+
 .fieldset {
     text-align: center;
     background: #758500;
@@ -115,91 +181,32 @@ h1 {
     border-radius: 10px;
     border: none;
     margin: 20px;
+    &__description {
+        font-weight: bold;
+        text-transform: uppercase;
+        transform: translate(0, 20px);/*wsuwa opis do środka pola fieldset*/
+        color:#1b1f00;
+        margin: auto;
+        padding: 20px;
+    }
+    &--radio {
+        display: block;
+        text-align: left;
+        background: #758500;
+        box-shadow: inset -8px 8px 16px #4b5500, 
+                   inset 8px -8px 16px #9fb500;
+        border-radius: 10px;
+        border: none;
+        margin: auto;
+        width: 50%;
+    }
 }
-.fieldset__description {
-    font-weight: bold;
-    text-transform: uppercase;
-    transform: translate(0, 20px);/*wsuwa opis do środka pola fieldset*/
-    color:#1b1f00;
-    margin: auto;
-    padding: 20px;
-}
-.fieldset--radio {
-    display: block;
-    text-align: left;
-    background: #758500;
-    box-shadow: inset -8px 8px 16px #4b5500, 
-               inset 8px -8px 16px #9fb500;
-    border-radius: 10px;
-    border: none;
-    margin: auto;
-    width: 50%;
-}
-.form-description--radio {
-    color:#1b1f00; 
-    grid-area: form-description; 
-    font-weight: bold; 
-    align-items: baseline;
-}
-.form__item--radio {
-    display: inline-block;
-    -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: linear-gradient(225deg, #7d8e00, #697800);
-    box-shadow:  -5px 5px 10px #4b5500, 
-                 5px -5px 10px #9fb500;
-    margin-right: 10px;
-    margin-left: 40px;
-    vertical-align: middle;
-}
-.form__item--radio:checked {
-    background: #abc200;
-    box-shadow: inset -2px 2px 4px #6d7c00, 
-                inset 2px -2px 4px #e9ff00;
-}
+
 .agreement {
     color:#1b1f00;
     padding: 20px;
     text-align: center;
-
-}
-.agreement__input {
-    text-align: center;
-}
-.form__item--checkbox {
-    -webkit-appearance: none;
-    position: relative;
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    background: linear-gradient(225deg, #7d8e00, #697800);
-    box-shadow:  -5px 5px 10px #4b5500, 
-                 5px -5px 10px #9fb500;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-.form__item--checkbox:checked {  
-    background: #abc200;
-    box-shadow: inset -2px 2px 4px #6d7c00, 
-                inset 2px -2px 4px #e9ff00;
-}
-.form__item--checkbox:checked::before {
-    position: absolute;
-    top: 5px;
-    left: 4px;
-    /* check from Font Awesome */
-    content: "\f00c";
-    font-family: "Font Awesome 5 Free";
-    font-size: 12px;
-    line-height: 12px;
-    font-weight: bold;
-    color: rgb(134, 0, 0);
-}
-.form-description--checkbox {
-    color:#1b1f00; 
-    grid-area: form-description; 
-    font-weight: bold; 
-    align-items: baseline;
+    &__input {
+        text-align: center;
+    }
 }
