--- a/style.scss
+++ b/style.scss
@@ -70,6 +70,9 @@ h1 {
         width: 100%;
         column-gap: 5px;
         padding: 0 10px;
+        &--essay {
+            margin: 30px 20px;
+        }
     }
     &__description {
         color:#1b1f00; 
@@ -93,8 +96,12 @@ h1 {
             color:#1b1f00; 
             grid-area: form-description; 
             font-weight: bold; 
-            display: flex;
-            align-items: top;
+            text-align: center;
+            display: block;
+            margin: 10px;
+        }
+        &--age {
+            color:#1b1f00; 
         }
     }
     &__item {
@@ -170,6 +177,12 @@ h1 {
                 }
             }
         }
+        &--essay {
+            display: block;
+            height: 180px;
+            box-shadow: inset -5px 5px 10px #4b5500, 
+                        inset 5px -5px 10px #9fb500;
+        }
     }
 }
 
@@ -193,8 +206,8 @@ h1 {
         display: block;
         text-align: left;
         background: #758500;
-        box-shadow: inset -8px 8px 16px #4b5500, 
-                   inset 8px -8px 16px #9fb500;
+        box-shadow: inset -5px 5px 10px #4b5500, 
+                   inset 5px -5px 10px #9fb500;
         border-radius: 10px;
         border: none;
         margin: auto;
@@ -210,3 +223,134 @@ h1 {
         text-align: center;
     }
 }
+.range-wrapper {
+    grid-area: form__item; 
+}
+.range {  
+    &__datalist {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__option {
+        color: #adc400;
+    }
+}
+
+/*range styling*/
+
+/*clears default styles from CSS-tricks*/
+input[type=range] {
+    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+    width: 100%; /* Specific width is required for Firefox. */
+    background: transparent; /* Otherwise white in Chrome */
+  }
+  
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+  }
+  
+  input[type=range]:focus {
+    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+  }
+  
+  input[type=range]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+  
+    /* Hides the slider so custom styles can be added */
+    background: transparent; 
+    border-color: transparent;
+    color: transparent;
+  }
+
+
+
+/*http://danielstern.ca/range.css/#/*/
+
+  input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    margin: -1.5px 0;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    box-shadow: inset -3px 3px 3px #4b5500, 
+                inset 3px -3px 3px #9fb500;
+    background: #758500;
+    border-radius: 3px;
+    border: 0px solid #010101;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
+    border: 2.9px solid #e9ff00;
+    height: 5px;
+    width: 13px;
+    border-radius: 24px;
+    background: #e9ff00;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: 2px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #758500;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    box-shadow: inset -3px 3px 3px #4b5500, 
+                inset 3px -3px 3px #9fb500;
+    background: #758500;
+    border-radius: 3px;
+    border: 0px solid #010101;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
+    border: 2.9px solid #e9ff00;
+    height: 5px;
+    width: 13px;
+    border-radius: 24px;
+    background: #e9ff00;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #758500;
+    border: 0px solid #010101;
+    border-radius: 0px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #758500;
+    border: 0px solid #010101;
+    border-radius: 0px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
+    border: 2.9px solid #e9ff00;
+    width: 13px;
+    border-radius: 24px;
+    background: #e9ff00;
+    cursor: pointer;
+    height: 5px;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #758500;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #758500;
+  }
+  
