style.scss custom property added, range showing value still not working

--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
+:root {
+  --my-background: #758500; }
+
 body {
-  background-color: #758500;
+  background-color: var(--my-background);
   background-attachment: fixed;
   display: flex;
   align-items: center;
@@ -187,7 +190,8 @@ h1 {
     text-align: center; }
 
 .range-wrapper {
-  grid-area: form__item; }
+  grid-area: form__item;
+  position: relative; }
 
 .range__datalist {
   display: flex;
@@ -195,6 +199,16 @@ h1 {
 
 .range__option {
   color: #adc400; }
+
+.range__output {
+  background: red;
+  color: white;
+  padding: 6px 12px;
+  position: absolute;
+  border-radius: 4px;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%); }
 
 /*range styling*/
 /*clears default styles from CSS-tricks*/
