--- a/style.css
+++ b/style.css
@@ -48,12 +48,19 @@ main {
   padding: 20px;
   position: relative; }
 
-h1 {
+.main-header {
   display: inline-block;
   font-size: 50px;
   text-transform: uppercase;
   color: #7d8e00;
-  text-shadow: -3px 3px 4px #4b5500,  2px -2px 4px #9fb500; }
+  text-shadow: -3px 3px 4px #4b5500,  2px -2px 4px #9fb500;
+  margin-bottom: 0; }
+
+.practice-header {
+  color: #1b1f00; }
+
+.current-date {
+  color: #9fb500; }
 
 .form {
   display: inline-block;
@@ -66,7 +73,9 @@ h1 {
     column-gap: 5px;
     padding: 0 10px; }
     .form__line--essay {
-      margin: 30px 20px; }
+      margin: 30px 20px 60px; }
+    .form__line--photo {
+      margin: 40px 0; }
   .form__description {
     color: #1b1f00;
     grid-area: form-description;
@@ -201,12 +210,13 @@ h1 {
   color: #adc400; }
 
 .range__output {
-  background: red;
-  color: white;
-  padding: 6px 12px;
+  background: linear-gradient(225deg, #7d8e00, #697800);
+  box-shadow: -5px 5px 10px #4b5500;
+  color: #1b1f00;
+  padding: 4px 8px;
   position: absolute;
   border-radius: 4px;
-  top: -10px;
+  top: -30px;
   left: 50%;
   transform: translateX(-50%); }
 
