--- a/style.css
+++ b/style.css
@@ -6,7 +6,18 @@ html {
   box-sizing: inherit; }
 
 :root {
-  --my-background: #758500; }
+  --my-background: #758500;
+  --shadow: #4b5500;
+  --light: #9fb500;
+  --label: #1b1f00;
+  --placeholder: #adc400;
+  --light-text: #e1ff00;
+  --gradient-from: #7d8e00;
+  --gradient-to: #697800;
+  --checked-background: #abc200;
+  --checked-shadow: #6d7c00;
+  --checked-light: #e9ff00;
+  --range-thumb-shadow: #c3d400; }
 
 body {
   background-color: var(--my-background);
@@ -21,18 +32,18 @@ body {
 
 .embellishment {
   font-size: 120px;
-  color: #7d8e00;
+  color: var(--gradient-from);
   position: absolute; }
   .embellishment--left {
     top: 300px;
     left: 300px;
     transform: rotate(-90deg);
-    text-shadow: -3px -3px 5px #4b5500,  3px 3px 4px #9fb500; }
+    text-shadow: -3px -3px 5px var(--shadow), 3px 3px 4px var(--light); }
   .embellishment--right {
     bottom: 300px;
     right: 300px;
     transform: rotate(90deg);
-    text-shadow: 3px 3px 5px #4b5500,  -3px -3px 4px #9fb500; }
+    text-shadow: 3px 3px 5px var(--shadow), -3px -3px 4px var(--light); }
 
 main {
   display: flex;
@@ -41,8 +52,8 @@ main {
   flex-flow: column;
   height: auto;
   min-height: 100vh;
-  background: #758500;
-  box-shadow: inset -12px 12px 12px #4b5500,  inset 12px -12px 12px #9fb500;
+  background: var(--my-background);
+  box-shadow: inset -12px 12px 12px var(--shadow), inset 12px -12px 12px var(--light);
   border-radius: 10px;
   margin: 50px 0;
   padding: 20px;
@@ -52,15 +63,15 @@ main {
   display: inline-block;
   font-size: 50px;
   text-transform: uppercase;
-  color: #7d8e00;
-  text-shadow: -3px 3px 4px #4b5500,  2px -2px 4px #9fb500;
+  color: var(--gradient-from);
+  text-shadow: -3px 3px 4px var(--shadow), 2px -2px 4px var(--light);
   margin-bottom: 0; }
 
 .practice-header {
-  color: #1b1f00; }
+  color: var(--label); }
 
 .current-date {
-  color: #9fb500; }
+  color: var(--light); }
 
 .form {
   display: inline-block;
@@ -77,48 +88,48 @@ main {
     .form__line--photo {
       margin: 40px 0; }
   .form__description {
-    color: #1b1f00;
+    color: var(--label);
     grid-area: form-description;
     font-weight: bold;
     display: flex;
     align-items: center; }
     .form__description--radio {
-      color: #1b1f00;
+      color: var(--label);
       grid-area: form-description;
       font-weight: bold;
       align-items: baseline; }
     .form__description--checkbox {
-      color: #1b1f00;
+      color: var(--label);
       grid-area: form-description;
       font-weight: bold;
       align-items: baseline; }
     .form__description--essay {
-      color: #1b1f00;
+      color: var(--label);
       grid-area: form-description;
       font-weight: bold;
       text-align: center;
       display: block;
       margin: 10px; }
     .form__description--age {
-      color: #1b1f00; }
+      color: var(--label); }
   .form__item {
     width: 100%;
-    color: #e1ff00;
-    background: #758500;
-    box-shadow: inset -4px 4px 4px #4b5500,  inset 4px -4px 4px #9fb500;
+    color: var(--light-text);
+    background: var(--my-background);
+    box-shadow: inset -4px 4px 4px var(--shadow), inset 4px -4px 4px var(--light);
     grid-area: form__item;
     border-radius: 6px;
     border: none;
     padding-left: 5px; }
     .form__item::placeholder {
-      color: #adc400; }
+      color: var(--placeholder); }
     .form__item--send {
       display: block;
       width: auto;
       margin: auto;
-      color: #e1ff00;
-      background: linear-gradient(225deg, #7d8e00, #697800);
-      box-shadow: -5px 5px 10px #4b5500,  5px -5px 10px #9fb500;
+      color: var(--light-text);
+      background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
+      box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
       border-radius: 6px;
       border: none;
       margin-top: 40px;
@@ -129,27 +140,27 @@ main {
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      background: linear-gradient(225deg, #7d8e00, #697800);
-      box-shadow: -5px 5px 10px #4b5500,  5px -5px 10px #9fb500;
+      background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
+      box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
       margin-right: 10px;
       margin-left: 40px;
       vertical-align: middle; }
       .form__item--radio:checked {
-        background: #abc200;
-        box-shadow: inset -2px 2px 4px #6d7c00,  inset 2px -2px 4px #e9ff00; }
+        background: var(--checked-background);
+        box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
     .form__item--checkbox {
       -webkit-appearance: none;
       position: relative;
       width: 20px;
       height: 20px;
       border-radius: 5px;
-      background: linear-gradient(225deg, #7d8e00, #697800);
-      box-shadow: -5px 5px 10px #4b5500,  5px -5px 10px #9fb500;
+      background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
+      box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
       margin-right: 10px;
       vertical-align: middle; }
       .form__item--checkbox:checked {
-        background: #abc200;
-        box-shadow: inset -2px 2px 4px #6d7c00,  inset 2px -2px 4px #e9ff00; }
+        background: var(--checked-background);
+        box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
         .form__item--checkbox:checked::before {
           position: absolute;
           top: 5px;
@@ -164,12 +175,12 @@ main {
     .form__item--essay {
       display: block;
       height: 180px;
-      box-shadow: inset -5px 5px 10px #4b5500,  inset 5px -5px 10px #9fb500; }
+      box-shadow: inset -5px 5px 10px var(--shadow), inset 5px -5px 10px var(--light); }
 
 .fieldset {
   text-align: center;
-  background: #758500;
-  box-shadow: -5px 5px 10px #4b5500,  5px -5px 10px #9fb500;
+  background: var(--my-background);
+  box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
   border-radius: 10px;
   border: none;
   margin: 20px; }
@@ -178,21 +189,21 @@ main {
     text-transform: uppercase;
     transform: translate(0, 20px);
     /*wsuwa opis do środka pola fieldset*/
-    color: #1b1f00;
+    color: var(--label);
     margin: auto;
     padding: 20px; }
   .fieldset--radio {
     display: block;
     text-align: left;
-    background: #758500;
-    box-shadow: inset -5px 5px 10px #4b5500,  inset 5px -5px 10px #9fb500;
+    background: var(--my-background);
+    box-shadow: inset -5px 5px 10px var(--shadow), inset 5px -5px 10px var(--light);
     border-radius: 10px;
     border: none;
     margin: auto;
     width: 50%; }
 
 .agreement {
-  color: #1b1f00;
+  color: var(--label);
   padding: 20px;
   text-align: center; }
   .agreement__input {
@@ -207,12 +218,12 @@ main {
   justify-content: space-between; }
 
 .range__option {
-  color: #adc400; }
+  color: var(--placeholder); }
 
 .range__output {
-  background: linear-gradient(225deg, #7d8e00, #697800);
-  box-shadow: -5px 5px 10px #4b5500;
-  color: #1b1f00;
+  background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
+  box-shadow: -5px 5px 10px var(--shadow);
+  color: var(--label);
   padding: 4px 8px;
   position: absolute;
   border-radius: 4px;
@@ -258,41 +269,41 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  box-shadow: inset -3px 3px 3px #4b5500,  inset 3px -3px 3px #9fb500;
-  background: #758500;
+  box-shadow: inset -3px 3px 3px var(--shadow), inset 3px -3px 3px var(--light);
+  background: var(--my-background);
   border-radius: 3px;
-  border: 0px solid #010101; }
+  border: 0px solid; }
 
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
-  border: 2.9px solid #e9ff00;
+  box-shadow: 1.8px 1.8px 5.9px var(--checked-light), 0px 0px 1.8px var(--range-thumb-shadow);
+  border: 2.9px solid var(--checked-light);
   height: 5px;
   width: 13px;
   border-radius: 24px;
-  background: #e9ff00;
+  background: var(--checked-light);
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: 2px; }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #758500; }
+  background: var(--my-background); }
 
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  box-shadow: inset -3px 3px 3px #4b5500,  inset 3px -3px 3px #9fb500;
-  background: #758500;
+  box-shadow: inset -3px 3px 3px var(--shadow), inset 3px -3px 3px var(--light);
+  background: var(--my-background);
   border-radius: 3px;
-  border: 0px solid #010101; }
+  border: 0px solid; }
 
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
-  border: 2.9px solid #e9ff00;
+  box-shadow: 1.8px 1.8px 5.9px var(--checked-light), 0px 0px 1.8px var(--range-thumb-shadow);
+  border: 2.9px solid var(--checked-light);
   height: 5px;
   width: 13px;
   border-radius: 24px;
-  background: #e9ff00;
+  background: var(--checked-light);
   cursor: pointer; }
 
 input[type=range]::-ms-track {
@@ -304,28 +315,28 @@ input[type=range]::-ms-track {
   color: transparent; }
 
 input[type=range]::-ms-fill-lower {
-  background: #758500;
-  border: 0px solid #010101;
+  background: var(--my-background);
+  border: 0px solid;
   border-radius: 0px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; }
+  box-shadow: 1px 1px 1px, 0px 0px 1px; }
 
 input[type=range]::-ms-fill-upper {
-  background: #758500;
-  border: 0px solid #010101;
+  background: var(--my-background);
+  border: 0px solid;
   border-radius: 0px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; }
+  box-shadow: 1px 1px 1px , 0px 0px 1px; }
 
 input[type=range]::-ms-thumb {
-  box-shadow: 1.8px 1.8px 5.9px #e9ff00, 0px 0px 1.8px #c3d400;
-  border: 2.9px solid #e9ff00;
+  box-shadow: 1.8px 1.8px 5.9px var(--checked-light), 0px 0px 1.8px var(--range-thumb-shadow);
+  border: 2.9px solid var(--checked-light);
   width: 13px;
   border-radius: 24px;
-  background: #e9ff00;
+  background: var(--checked-light);
   cursor: pointer;
   height: 5px; }
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #758500; }
+  background: var(--my-background); }
 
 input[type=range]:focus::-ms-fill-upper {
-  background: #758500; }
+  background: var(--my-background); }
