--- a/style.scss
+++ b/style.scss
@@ -80,10 +80,40 @@ main {
 .practice-header {
   color: var(--label);
 }
+.date-and-mode {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width:100%;
+  padding: 10px;
+}
 .current-date {
   color: var(--light);
-
+  grid-column: 1;
+  align-self: center;
 }
+.change-mode {
+  grid-column: 2;
+  justify-self: end;
+  width: max-content;
+  height: max-content;
+  align-self: center;
+  color:var(--label); 
+  background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
+  box-shadow:  -5px 5px 10px var(--shadow), 
+               5px -5px 10px var(--light); 
+  border-radius: 6px;
+  border: none;
+  padding: 5px 15px;
+  &:hover {
+    cursor: pointer;
+  &:active {
+    background: var(--checked-background);
+    box-shadow: inset -2px 2px 4px var(--checked-shadow), 
+                inset 2px -2px 4px var(--checked-light);
+  }
+  }
+}
+
 .form {
   display: inline-block;
   width: 600px;
