mode button working with one css custom property

--- a/style.css
+++ b/style.css
@@ -84,9 +84,9 @@ main {
 .change-mode {
   grid-column: 2;
   justify-self: end;
+  align-self: center;
   width: max-content;
   height: max-content;
-  align-self: center;
   color: var(--label);
   background: linear-gradient(225deg, var(--gradient-from), var(--gradient-to));
   box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
@@ -95,9 +95,9 @@ main {
   padding: 5px 15px; }
   .change-mode:hover {
     cursor: pointer; }
-    .change-mode:hover:active {
-      background: var(--checked-background);
-      box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
+  .change-mode:active {
+    background: var(--checked-background);
+    box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
 
 .form {
   display: inline-block;
