--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ html {
 --range-thumb-shadow: #c3d400;
 }
 
+
 body {
   background-color: var(--my-background);
   background-attachment: fixed;
@@ -239,6 +240,7 @@ main {
           height: 180px;
           box-shadow: inset -5px 5px 10px var(--shadow), 
                       inset 5px -5px 10px var(--light);
+          padding: 10px;
       }
   }
 }
