--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Baloo Chettan 2', cursive;
-  position: relative;
 }
 
 .embellishment {
@@ -40,14 +39,14 @@ body {
   position: absolute;
   &--left {
       top: 300px;
-      left: 300px;
+      left: -340px;
       transform: rotate(-90deg);
       text-shadow:  -3px -3px 5px var(--shadow), 
                    3px 3px 4px var(--light); 
   }
   &--right {
       bottom: 300px;
-      right: 300px;
+      right: -340px;
       transform: rotate(90deg);
       text-shadow:  3px 3px 5px var(--shadow), 
                    -3px -3px 4px var(--light); 
@@ -76,7 +75,7 @@ main {
   color: var(--gradient-from);
   text-shadow:  -3px 3px 4px var(--shadow), 
                2px -2px 4px var(--light); 
-  margin-bottom: 0;    
+  margin-bottom: 20px;    
 }
 .practice-header {
   color: var(--label);
