pick and change color working

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ html {
   --checked-background: #abc200;
   --checked-shadow: #6d7c00;
   --checked-light: #e9ff00;
-  --range-thumb-shadow: #c3d400; }
+  --range-thumb-shadow: #c3d400;
+  --custom-color: #7d8e00; }
 
 body {
   background-color: var(--my-background);
@@ -30,19 +31,30 @@ body {
   font-family: 'Baloo Chettan 2', cursive; }
 
 .embellishment {
+  color: var(--custom-color);
   font-size: 120px;
-  color: var(--gradient-from);
   position: absolute; }
+  @media (max-width: 900px) {
+    .embellishment {
+      font-size: 70px; } }
   .embellishment--left {
     top: 300px;
     left: -340px;
     transform: rotate(-90deg);
     text-shadow: -3px -3px 5px var(--shadow), 3px 3px 4px var(--light); }
+    @media (max-width: 900px) {
+      .embellishment--left {
+        top: 910px;
+        left: -100px; } }
   .embellishment--right {
     bottom: 300px;
     right: -340px;
     transform: rotate(90deg);
     text-shadow: 3px 3px 5px var(--shadow), -3px -3px 4px var(--light); }
+    @media (max-width: 900px) {
+      .embellishment--right {
+        bottom: 845px;
+        right: -100px; } }
 
 main {
   display: flex;
@@ -57,6 +69,9 @@ main {
   margin: 50px 0;
   padding: 20px;
   position: relative; }
+  @media (max-width: 900px) {
+    main {
+      width: 90vw; } }
 
 .main-header {
   display: inline-block;
@@ -99,7 +114,8 @@ main {
     box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
 
 .form {
-  display: inline-block;
+  display: flex;
+  flex-flow: column;
   width: 600px; }
   .form__line {
     display: grid;
@@ -112,6 +128,10 @@ main {
       margin: 30px 20px 60px; }
     .form__line--photo {
       margin: 40px 0; }
+    .form__line--color {
+      margin-top: 40px;
+      width: 40%;
+      align-self: center; }
   .form__description {
     color: var(--label);
     grid-area: form-description;
@@ -202,6 +222,9 @@ main {
       height: 180px;
       box-shadow: inset -5px 5px 10px var(--shadow), inset 5px -5px 10px var(--light);
       padding: 10px; }
+    .form__item--color {
+      padding: 5px;
+      height: 2.5em; }
 
 .fieldset {
   text-align: center;
